--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -594,21 +594,18 @@ body{
 }
 .products{
     width: 100%;
-    height: 100%;
-    background-color: yellow;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .productsinner{
-    width:80%;
+    width:85%;
     height: 100%;
-    background-color: green;
 }
 .productshead{
     width: 100%;
     height:10%;
-    background-color: red;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -620,7 +617,7 @@ body{
 }
 .productshead ul{
     width: 40%;
-    height: 90%;
+    height: 95%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -643,24 +640,19 @@ body{
 }
 .product1{
     width: 100%;
-    /* background-color: aqua; */
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(4,4fr);
+    grid-gap: 20px;
 }
 .productouter{
     width: 100%;
-    height: 580px;
-    background-color: rgb(95, 165, 42);
-    padding: 10px;
+    height: 100%;
+    padding: 5px;
     position: relative;
     overflow: hidden;
 }
-.productouter img{
-    width: 100%;
-    height: 80%;
-    border-radius: 30px;
-    object-fit: cover;
-}
+
 .productouter p{
     position: absolute;
     width: 120px;
@@ -676,23 +668,7 @@ body{
     top: 25px;
     left: 30px;
 }
-.productouter button{
-    position: absolute;
-    bottom: -50px;
-    right: 105px;
-    width: 150px;
-    height: 40px;
-    font-weight: 900;
-    background-color: black;
-    color: white;
-    border-radius: 20px;
-    overflow: hidden;
-}
-.productouter:hover button{
-    bottom: 13px;
-    right: 105px;
-    transition: 0.5s;
-}
+
 .producticons{
     display: flex;
     align-items: center;
@@ -704,7 +680,7 @@ body{
 .pheart{
     position: absolute;
     right: 20px;
-    bottom: 330px;
+    bottom: 300px;
     width: 45px;
     height: 45px;
     display: flex;
@@ -717,7 +693,7 @@ body{
 .pcomment{
     position: absolute;
     right: 20px;
-    bottom: 280px;
+    bottom: 250px;
     width: 45px;
     height: 45px;
     display: flex;
@@ -729,8 +705,7 @@ body{
 }
 .productdetails{
     width: 100%;
-    height: 100px;
-    background-color: blue;
+    height: 20%;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -751,8 +726,146 @@ body{
     align-items: center;
     justify-content: flex-end;
 }
-.productouter:hover img{
-    height: 95%;
-    transition: 0.4s;
+
+.op{
+    width: 100%;
+    height: 82%;
+    position: relative;
     overflow: hidden;
+}
+.op img{
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    object-fit: cover;   
+    transition: 0.5s; 
+}
+.productouter:hover .op img{
+    height: 95%;
+}
+.op button{
+    position: absolute;
+    bottom: -40px;
+    right: 78px;
+    width: 150px;
+    height: 40px;
+    font-weight: 900;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.productouter:hover .op button{
+    bottom:5px;
+    right: 78px;
+    transition: 0.5s;
+}
+.op button:hover{
+    background-color: rgb(244, 45, 45);
+    color: white;
+}
+.banner{
+    margin-top: 50px;
+    width: 100%;
+    height: 68%;
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.bannerleft{
+    width: 50%;
+    height: 100%;
+    background-color: green;
+    position: relative;
+}
+.bannerleft img{
+    width: 100%;
+    height: 100%;
+}
+.leftdetails{
+    background-image: url(../images/circle.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 325px;
+    height: 325px;
+    right: 50px;
+    top: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 3px;
+}
+.leftdetails h4{
+    font-size: small;
+    font-weight: bolder;
+}
+.leftdetails h3{
+    font-size: 45px;
+    font-size: xx-large;
+    letter-spacing: 8px;
+    font-weight: bolder;
+}
+.leftdetails h1{
+    font-size: 90px;
+    font-weight: bolder;
+}
+.leftdetails button{
+    width: 165px;
+    height: 55px;
+    border-radius: 20px;
+    font-family: "Numans", serif; 
+    background-color: white;
+    color: black;
+    font-weight: bolder;
+}
+.leftdetails button:hover{
+    background-color: black;
+    color: white;
+    transition: 0.5s;
+}
+.bannerright{
+    width: 50%;
+    height: 100%;
+    background-color: brown;
+    position: relative;
+}
+.bannerright img{
+    width: 100%;
+    height: 100%;
+}
+.rightdetails{
+    position: absolute;
+    bottom: 125px;
+    left: 40px;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 8px;
+}
+.rightdetails h4{
+    font-size: small;
+    font-weight: bolder;
+}
+.rightdetails h1{
+    font-weight: bolder;
+}
+.rightdetails button{
+    width: 165px;
+    height: 55px;
+    border-radius: 20px;
+    font-family: "Numans", serif; 
+    background-color: black;
+    color: white;
+    font-weight: bolder;
+}
+.rightdetails button:hover{
+    background-color: white;
+    color: black;
+    transition: 0.5s;
 }
